[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bitflags = "1.3.2"
bitstream-io = "1.2.0"
hex = "0.4.3"
itertools = "0.10.0"
retain_mut = "0.1.4"
scan_fmt = "0.2.6"
